tests/vendor/valid/trivial/mult.c
//expect 6
//tags: trivial, binary
int main() { return 2 * 3; }