tests/vendor/invalid/syntax/no_semicolon_2.c
//tags: trivial
int main(void) {
    return 2*2
}